distinguish slide background and code background

--- a/papers/cppnow24/my_theme.css
+++ b/papers/cppnow24/my_theme.css
@@ -18,7 +18,7 @@ html * {
  * GLOBAL STYLES
  *********************************************/
 :root {
-  --r-background-color: #fbf7f0;
+  --r-background-color: #efe9dd;
   --r-main-font: Source Sans Pro, sans-serif;
   --r-main-font-size: 40px;
   --r-main-color: #000000;
